--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	font-family: 'Ubuntu';
 }
 body{
-	background:url(Beach.jpg);
+	background:url(https://unsplash.com/photos/9wVHyp90lgI);
 	background-size: cover;
 	background-position: center;
 }
