--- a/elements.css
+++ b/elements.css
@@ -4,7 +4,10 @@
   /*-----------------------------------------------------------------------------------*/
 /*  Navigation Bar
 /*-----------------------------------------------------------------------------------*/
+.navbar{
+	box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.14);
 
+}
 nav ul li a {
 	font-size: 12px;
 	color: black;
@@ -26,7 +29,6 @@ html{
 	font-weight: 500;
 	color: black;
 }
-
   /*-----------------------------------------------------------------------------------*/
 /*  Header
 /*-----------------------------------------------------------------------------------*/
