--- a/elements.css
+++ b/elements.css
@@ -65,7 +65,6 @@ body, html{
   }
 .navbar{
 	box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.14);
-
 }
 nav ul li a {
 	font-size: 12px;
@@ -133,7 +132,6 @@ nav a:hover{
 
 #aboutBg{
     background-color: #E1803C;
-    height: 100vh;
 }
 #aboutBg h2{
     font-family: 'Dancing Script', cursive;
@@ -187,6 +185,7 @@ hr{
 ***********************************/
 /* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
 .icon-bar {
+    box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.14);
     z-index: 9999;
     position: fixed;
     top: 50%;
@@ -201,18 +200,18 @@ hr{
     text-align: center;
     padding: 15px 10px;
     transition: all 0.3s ease;
-    color: white;
+    color: black;
     font-size: 20px;
   }
   
   /* Style the social media icons with color, if you want */
   .icon-bar a:hover {
-    background-color: white;
+    background-color: black;
     color: #E1803C;
   }
   
   .icon {
-    background: black;
+    background: white;
     color: white;
   }
 
