--- a/elements.css
+++ b/elements.css
@@ -5,7 +5,29 @@
 
 body, html{
     height: 100%;
+    /* Create smooth scrolling effect on all presses */
+    scroll-behavior: smooth;
 }
+
+
+
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-image: url('images/preloader.gif');
+    background-repeat: no-repeat; 
+    background-color: black;
+    background-position: center;
+ }
+
+
+
+
+
   /**********************************
     Media Queries for responsivness
 ***********************************/
@@ -148,10 +170,23 @@ nav a:hover{
     margin-left: 0;
     margin-right: 0;
 }
-.jumbotron{
+/* .jumbotron{
     background: url(images/5.jpg) no-repeat scroll center center / cover;
     height: 100vh;
-}
+} */
+.parallax { 
+    /* The image used */
+    background: url(images/5.jpg);
+  
+    /* Set a specific height */
+    height: 100%; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 #profilePicture{
     z-index: 9999;
     vertical-align: middle;
