--- a/elements.css
+++ b/elements.css
@@ -6,6 +6,9 @@ body, html{
     /* Create smooth scrolling effect on all presses */
     scroll-behavior: smooth;
 }
+#dashboardPage{
+    padding-top: 74px;
+}
 
 
 
@@ -78,6 +81,12 @@ body, html{
     top: -74px; /* Hide the navbar 50 px outside of the top view */
     width: 100%; /* Full width */
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
+  }
+  #menuLogin {
+    background-color: white; /* Black background color */
+    position: fixed; /* Make it stick/fixed */
+    top: -74px; /* Hide the navbar 50 px outside of the top view */
+    width: 100%; /* Full width */
   }
 .navbar{
 	box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.14);
@@ -276,3 +285,13 @@ table, th, td {
 /*  */
 /* Contact Form */
 /*  */
+
+#myInput {
+    background-position: 10px 12px; /* Position the search icon */
+    background-repeat: no-repeat; /* Do not repeat the icon image */
+    width: 100%; /* Full-width */
+    font-size: 16px; /* Increase font-size */
+    padding: 12px 20px 12px 40px; /* Add some padding */
+    border: 1px solid #ddd; /* Add a grey border */
+    margin-bottom: 12px; /* Add some space below the input */
+  }
